--- a/Kobe's_Career_Per_and_MP_based_on_ages.ipynb
+++ b/Kobe's_Career_Per_and_MP_based_on_ages.ipynb
@@ -6,7 +6,7 @@
       "name": "Kobe's Career Per and MP based on ages",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoXAQ5/ueuo78FLDAlkuew",
+      "authorship_tag": "ABX9TyOxHa9srbh1O96o18WV90jp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,7 @@
         "import seaborn as sns\n",
         "%matplotlib inline\n",
         "import plotly.graph_objects as go\n",
+        "import plotly.express as px\n",
         "\n",
         "data = pd.read_csv( '/content/advanced_stats.csv', parse_dates=['Season'])"
       ],
